<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="
         http://maven.apache.org/POM/4.0.0
         https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <!-- ========================= -->
    <!-- PROJECT -->
    <!-- ========================= -->

    <groupId>com.huaducdat</groupId>

    <artifactId>store-manager-client-app</artifactId>

    <version>1.0-SNAPSHOT</version>

    <name>store-manager-client-app</name>

    <!-- ========================= -->
    <!-- PROPERTIES -->
    <!-- ========================= -->

    <properties>

        <maven.compiler.release>21</maven.compiler.release>

        <project.build.sourceEncoding>
            UTF-8
        </project.build.sourceEncoding>

        <javafx.version>21</javafx.version>

        <javafx.sdk.lib>
            /Users/ducdathua/Desktop/TestApp/FamilyMiniStore/javafx-sdk-mac/lib
        </javafx.sdk.lib>

        <lombok.version>1.18.40</lombok.version>

        <jackson.version>2.17.1</jackson.version>

        <main.class>
            com.huaducdat.storemanagerclient.MainApp
        </main.class>

    </properties>

    <!-- ========================= -->
    <!-- DEPENDENCIES -->
    <!-- ========================= -->

    <dependencies>

        <!-- JAVAFX -->

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-media</artifactId>
            <version>${javafx.version}</version>
            <scope>system</scope>
            <systemPath>${javafx.sdk.lib}/javafx.media.jar</systemPath>
        </dependency>

        <!-- JACKSON -->

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
        </dependency>

        <!-- LOMBOK -->

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>

    </dependencies>

    <!-- ========================= -->
    <!-- BUILD -->
    <!-- ========================= -->

    <build>

        <plugins>

            <!-- ========================= -->
            <!-- COMPILER -->
            <!-- ========================= -->

            <plugin>

                <groupId>org.apache.maven.plugins</groupId>

                <artifactId>maven-compiler-plugin</artifactId>

                <version>3.11.0</version>

                <configuration>

                    <release>${maven.compiler.release}</release>

                    <annotationProcessorPaths>

                        <path>

                            <groupId>org.projectlombok</groupId>

                            <artifactId>lombok</artifactId>

                            <version>${lombok.version}</version>

                        </path>

                    </annotationProcessorPaths>

                </configuration>

            </plugin>

            <!-- ========================= -->
            <!-- JAVAFX -->
            <!-- ========================= -->

            <plugin>

                <groupId>org.openjfx</groupId>

                <artifactId>javafx-maven-plugin</artifactId>

                <version>0.0.8</version>

                <configuration>

                    <mainClass>${main.class}</mainClass>

                    <options>
                        <option>--add-modules=javafx.controls,javafx.fxml,javafx.media</option>
                        <option>-Djava.library.path=${javafx.sdk.lib}</option>
                    </options>

                </configuration>

            </plugin>

            <!-- ========================= -->
            <!-- FAT JAR -->
            <!-- ========================= -->

            <plugin>

                <groupId>org.apache.maven.plugins</groupId>

                <artifactId>maven-shade-plugin</artifactId>

                <version>3.5.0</version>

                <executions>

                    <execution>

                        <phase>package</phase>

                        <goals>

                            <goal>shade</goal>

                        </goals>

                        <configuration>

                            <createDependencyReducedPom>false</createDependencyReducedPom>

                            <filters>

                                <filter>

                                    <artifact>*:*</artifact>

                                    <excludes>

                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>

                                    </excludes>

                                </filter>

                            </filters>

                            <transformers>

                                <transformer
                                        implementation=
                                                "org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">

                                    <mainClass>${main.class}</mainClass>

                                </transformer>

                            </transformers>

                        </configuration>

                    </execution>

                </executions>

            </plugin>

        </plugins>

    </build>

</project>
